--- a/src/main/resources/assets/super-decaying-simulator-2022/lang/en_us.json
+++ b/src/main/resources/assets/super-decaying-simulator-2022/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-	"key.super-decaying-simulator-2022.open-stats-gui": "(sdss2022) View Statistics",
+	"key.super-decaying-simulator-2022.open-stats-gui": "(sds2022) View Statistics",
 	
 	"gui.super-decaying-simulator-2022.mana-stats": "Mana Stats",
 	"gui.super-decaying-simulator-2022.mana-stats.waiting": "Waiting for server...",
